--- a/build.gradle
+++ b/build.gradle
@@ -3,6 +3,7 @@
 buildscript {
     ext {
         kotlin_version = '1.8.20-Beta'
+        nav_version = '2.3.5'
     }
     repositories {
         // Make sure that you have the following two repositories
@@ -14,6 +15,7 @@ buildscript {
         // Add the dependency for the Google services Gradle plugin
         classpath 'com.google.gms:google-services:4.3.15'
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
+        classpath("androidx.navigation:navigation-safe-args-gradle-plugin:2.5.3")
     }
 }
 
