--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,7 +12,7 @@
         android:theme="@style/Theme.EzPTP"
         tools:targetApi="31">
         <activity
-            android:name=".MainActivity"
+            android:name=".main_menu.MenuActivity"
             android:exported="false"
             android:label="@string/title_activity_main"
             android:theme="@style/Theme.EzPTP" />
