--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,14 +12,14 @@
         android:theme="@style/Theme.EzPTP"
         tools:targetApi="31">
         <activity
-            android:name=".main_menu.MenuActivity"
+            android:name=".main.MainActivity"
             android:exported="false"
             android:label="@string/title_activity_main"
             android:theme="@style/Theme.EzPTP" />
 
 
         <activity
-            android:name=".login.LoginActivity"
+            android:name=".auth.AuthActivity"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
