--- a/build.gradle
+++ b/build.gradle
@@ -1,6 +1,9 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 
+
 buildscript {
+
+
     ext {
         kotlin_version = '1.8.20-Beta'
         nav_version = '2.3.5'
@@ -11,18 +14,23 @@ buildscript {
         mavenCentral()  // Maven Central repository
     }
 
+
     dependencies {
         // Add the dependency for the Google services Gradle plugin
         classpath 'com.google.gms:google-services:4.3.15'
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
         classpath("androidx.navigation:navigation-safe-args-gradle-plugin:2.5.3")
+        classpath "org.jetbrains.kotlin:kotlin-serialization:$kotlin_version"
     }
 }
+
+
 
 plugins {
     id 'com.android.application' version '7.4.2' apply false
     id 'com.android.library' version '7.4.2' apply false
     id 'org.jetbrains.kotlin.android' version '1.8.0' apply false
+    id 'org.jetbrains.kotlin.plugin.serialization' version '1.7.10' apply false
 }
 
 
