--- a/build.gradle
+++ b/build.gradle
@@ -5,7 +5,7 @@ buildscript {
 
 
     ext {
-        kotlin_version = '1.8.20-Beta'
+        kotlin_version = '1.8.0'
         nav_version = '2.3.5'
     }
     repositories {
