--- a/app/build.gradle
+++ b/app/build.gradle
@@ -70,5 +70,6 @@ dependencies {
     androidTestImplementation 'androidx.test.ext:junit:1.1.5'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.1'
     implementation "org.jetbrains.kotlinx:kotlinx-serialization-runtime:0.20.0"
+    implementation "androidx.compose.material:material-icons-extended:1.4.3"
 }
 
